feat: LLMBatch加入业务